# qtquick-mapview

./: .gitignore  CMakeLists.txt  README.md
patches/: qlist.patch
qml/: Flight.qml  Map.qml  main.qml  map.qml
src/: CMakeLists.txt  lineinterpolator.cpp  lineinterpolator.h  locationsmodel.cpp  locationsmodel.h  main.cpp
src/qml/: Flight.qml  Map.qml  mapview.qrc
src/tests/: CMakeLists.txt  interpolation.cpp
